--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
         .login_menu *:first-child {border: 1px solid red ;}
         a:nth-of-type(2n-2) {border: 1px solid red ;}
         .column_1 > li[class=header] {border: 1px solid red ;}
-        .ul > li[디아블로게임용노트북] {border: 1px solid red ;}
+        .ul > li[주제2=디아블로게임용노트북] {border: 1px solid red ;}
 
         /* 1. 26 라인의 <img>태그를 선택하는 선택자를 작성하시오.*/
         /* 2. 28~32 라인의 <div>태그를 선택하는 선택자를 작성하시오(후손 선택자 필수)*/
