--- a/social.html/cougrou.html
+++ b/social.html/cougrou.html
@@ -52,5 +52,67 @@
         <div class="menu item_9 active"></div>
         <div class="menu item_10"></div>
     </nav>
+    <div id="detail_list">
+        <ul class="column_1">
+            <li class="header"><p>게임용노트북</p></li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li class="header"><p>울트라노트북</p></li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+        </ul>
+        <ul class="column_2">
+            <li>물건 이름</li>
+            <li class="header"><p>노트북 가방</p></li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li class="header"><p>받침대/쿨러</p></li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+        </ul>
+        <ul class="column_3">
+            <li class="header"><p>노트북 보호 용품</p></li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li class="header"><p>맥북</p></li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li class="header"><p> 노트북 보호 용품</p></li>
+            <li>물건 이름</li>
+        </ul>
+        <ul class="column_4">
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li class="header"><p>노트북 보조 용품</p></li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+        </ul>
+        <ul class="column_5">
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li class="header"><p>외장 하드 디스크</p></li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+            <li>물건 이름</li>
+        </ul>
+    </div>
 </body>
 </html>
