--- a/social.html/cougrou.html
+++ b/social.html/cougrou.html
@@ -114,5 +114,32 @@
             <li>물건 이름</li>
         </ul>
     </div>
+    <div id="content">
+        <figure id="product_image">
+            <img src="http://placehold.it/980x440" width="980" height="440" />
+            </figure>
+        <section id="product_section">
+            <article id="product_article">
+                <img src="http://placehold.it/795x400" width="795" height="400" />
+                <img src="http://placehold.it/795x400" width="795" height="400" />
+                <img src="http://placehold.it/795x400" width="795" height="400" />
+            </article>
+            <aside id="product_aside">
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+                <a href="#"><img src="http://placehold.it/170x200" width="170" height="200" /></a>
+            </aside>
+        </section>
+    </div>
+    <footer id="main_footer">
+        <h1>모던 웹 디자인을 위한 HTML5 + CSS3 입문</h1>
+    </footer>
 </body>
 </html>
